merged: feature/first-calculations to main

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ggia-backend:
     container_name: "ggia-backend"
     build:
-      context: ./flaskapp
+      context: .
     ports:
       - "8000:8000"
       
