updated: models.py, Dockerfile, docker-compose.yml; added: migration;

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,23 @@ services:
       context: .
     ports:
       - "8000:8000"
+    depends_on:
+      - ggia-postgres
+
+  ggia-postgres:
+    container_name: "ggia-db"
+    image: docker.io/bitnami/postgresql:11
+    ports:
+      - '5432:5432'
+    volumes:
+      - 'postgresql_data:/bitnami/postgresql'
+    environment:
+      - POSTGRESQL_PASSWORD=postgres
+      - POSTGRESQL_USER=postgres
+      - POSTGRESQL_DATABASE=postgres
+    restart: always
+
+volumes:
+  postgresql_data:
+    driver: local
       
