--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
   ggia-backend:
     container_name: "ggia-backend"
     build:
-      context: .
+        context: ./frontend_qgassp
+        dockerfile: Dockerfile
     ports:
       - "8000:8000"
     # depends_on:
