update documentaiton for local dataset

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,10 +1,10 @@
 FROM python:3.9-slim
 COPY requirements.txt /
-COPY config-dev.json /config.json
 RUN pip3 install --upgrade pip && pip3 install -r /requirements.txt
 COPY . /app
 # ENV FLASKDEBUG=0
 WORKDIR /app
+COPY config-dev.json ./config.json
 EXPOSE 8000
 # CMD flask db upgrade && gunicorn  app:cli -w 2 --threads 2 -b 0.0.0.0:8000
 CMD gunicorn  app:cli -w 2 --threads 2 -b 0.0.0.0:8000
