--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,6 +1,8 @@
 FROM python:3.9-slim
 COPY requirements.txt /
 RUN pip3 install --upgrade pip && pip3 install -r /requirements.txt
+RUN mkdir -p "/app/CSVfiles/local_datasets"
+VOLUME ["/app/CSVfiles/local_datasets"]
 COPY . /app
 # ENV FLASKDEBUG=0
 WORKDIR /app
